<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/results_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/results"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/crimson_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/results_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/circular_progress"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_title" />

    <TextView
        android:id="@+id/results_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/crimson_text"
        app:layout_constraintBottom_toBottomOf="@+id/results_progress"
        app:layout_constraintEnd_toEndOf="@+id/results_progress"
        app:layout_constraintStart_toStartOf="@+id/results_progress"
        app:layout_constraintTop_toTopOf="@+id/results_progress" />

    <TextView
        android:id="@+id/results_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="Correct Answer"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:fontFamily="@font/work_sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_progress" />

    <TextView
        android:id="@+id/results_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Wrong Answer"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:fontFamily="@font/work_sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_correct" />

    <TextView
        android:id="@+id/results_missed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Questions Missed"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:fontFamily="@font/work_sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_wrong" />

    <TextView
        android:id="@+id/results_correct_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="NA"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:fontFamily="@font/work_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/results_correct" />

    <TextView
        android:id="@+id/results_wrong_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="NA"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:fontFamily="@font/work_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/results_wrong" />

    <TextView
        android:id="@+id/results_missed_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="NA"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:fontFamily="@font/work_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/results_missed" />

    <Button
        android:id="@+id/results_home_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/go_to_home"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:background="@drawable/primary_btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>